--- a/package.json
+++ b/package.json
@@ -40,5 +40,8 @@
     "prettier": "^1.19.1",
     "socket.io": "^2.2.0"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "diff": "^4.0.2"
+  }
 }
